--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -53,7 +53,8 @@ $secondary-color: $uclagold;
 $alert-color: $ucladarkblue;
 $alert-bg-color: $uclayellowneon;
 $error-color: $uclapinkneon;
-$error-bg-color: darken($uclapinkneon, 43%);
+$error-bg-color: darken($uclapinkneon, 42%);
+$error-bg-color-alt: darken($uclapinkneon, 46%);
 $bullet-color: $uclagreenneon;
 $footer-link-color: $white;
 $footer-link-color-hover: $uclayellowneon;
