3-15 char limit for logon id

--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -7,7 +7,7 @@
 		<ol>
 			<li>
 				<label for="logon">Account ID</label>
-				<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" required autofocus>
+				<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus>
 			</li>
 			<li>
 				<label for="pass">Password</label>
