--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -31,13 +31,13 @@ select[disabled], input[disabled] {
 
 input:focus:invalid,
 select:focus:invalid {
-	color: #b94a48;
-	border-color: #ee5f5b;
+	color: darken($uclapinkneon, 15%);
+	border-color: $uclapinkneon;
 }
 
 input:focus:invalid:focus,
 select:focus:invalid:focus {
-	border-color: #e9322d;
+	border-color: $uclapinkneon;
 }
 
 select {
