--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -237,14 +237,14 @@ select[disabled], input[disabled] {
 /* line 32, ../_scss/_forms.scss */
 input:focus:invalid,
 select:focus:invalid {
-  color: #b94a48;
-  border-color: #ee5f5b;
+  color: #b30073;
+  border-color: #ff00a5;
 }
 
 /* line 38, ../_scss/_forms.scss */
 input:focus:invalid:focus,
 select:focus:invalid:focus {
-  border-color: #e9322d;
+  border-color: #ff00a5;
 }
 
 /* line 43, ../_scss/_forms.scss */
