initial responsive framing

--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,5 +1,7 @@
-<footer role="contentinfo">
-	<p class="footer-meta-info"><a href="{{ site.baseurl }}/cms-policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: {{ site.time }} <a href="/." class="non-human">NH</a></p>
+<footer role="contentinfo" class="tertiary-links">
+	<div class="tertiary-links-wrapper">
+		<p><a href="{{ site.baseurl }}/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="/." class="right">NH</a></p>
+	</div>
 </footer>
 
 <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
