--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -657,42 +657,44 @@ article {
 
 /* line 221, ../_scss/_sso-styles.scss */
 .badge-alert {
+  position: absolute;
+  bottom: -3em;
+  right: 35%;
+  width: 6.25em;
+  height: 5em;
   background: #ffff00;
 }
 @media (min-width: 22.01em) {
   /* line 221, ../_scss/_sso-styles.scss */
   .badge-alert {
-    position: absolute;
     top: -1em;
     right: -4em;
-    width: 6.25em;
-    height: 5em;
-  }
-  /* line 9, ../_scss/_mixins.scss */
-  .badge-alert:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -1.25em;
-    width: 0;
-    height: 0;
-    border-top: 2.5em solid transparent;
-    border-right: 1.25em solid #ffff00;
-    border-bottom: 2.5em solid transparent;
-  }
-  /* line 20, ../_scss/_mixins.scss */
-  .badge-alert:after {
-    content: "";
-    position: absolute;
-    right: -1.25em;
-    width: 0;
-    height: 0;
-    border-top: 2.5em solid transparent;
-    border-left: 1.25em solid #ffff00;
-    border-bottom: 2.5em solid transparent;
   }
 }
-/* line 31, ../_scss/_mixins.scss */
+/* line 12, ../_scss/_mixins.scss */
+.badge-alert:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -1.25em;
+  width: 0;
+  height: 0;
+  border-top: 2.5em solid transparent;
+  border-right: 1.25em solid #ffff00;
+  border-bottom: 2.5em solid transparent;
+}
+/* line 23, ../_scss/_mixins.scss */
+.badge-alert:after {
+  content: "";
+  position: absolute;
+  right: -1.25em;
+  width: 0;
+  height: 0;
+  border-top: 2.5em solid transparent;
+  border-left: 1.25em solid #ffff00;
+  border-bottom: 2.5em solid transparent;
+}
+/* line 33, ../_scss/_mixins.scss */
 .badge-alert i {
   font-size: 4.25em;
   color: #0055a6;
@@ -702,42 +704,44 @@ article {
 
 /* line 225, ../_scss/_sso-styles.scss */
 .badge-error {
+  position: absolute;
+  bottom: -3em;
+  right: 35%;
+  width: 6.25em;
+  height: 5em;
   background: #29001a;
 }
 @media (min-width: 22.01em) {
   /* line 225, ../_scss/_sso-styles.scss */
   .badge-error {
-    position: absolute;
     top: -1em;
     right: -4em;
-    width: 6.25em;
-    height: 5em;
-  }
-  /* line 9, ../_scss/_mixins.scss */
-  .badge-error:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -1.25em;
-    width: 0;
-    height: 0;
-    border-top: 2.5em solid transparent;
-    border-right: 1.25em solid #29001a;
-    border-bottom: 2.5em solid transparent;
-  }
-  /* line 20, ../_scss/_mixins.scss */
-  .badge-error:after {
-    content: "";
-    position: absolute;
-    right: -1.25em;
-    width: 0;
-    height: 0;
-    border-top: 2.5em solid transparent;
-    border-left: 1.25em solid #29001a;
-    border-bottom: 2.5em solid transparent;
   }
 }
-/* line 31, ../_scss/_mixins.scss */
+/* line 12, ../_scss/_mixins.scss */
+.badge-error:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -1.25em;
+  width: 0;
+  height: 0;
+  border-top: 2.5em solid transparent;
+  border-right: 1.25em solid #29001a;
+  border-bottom: 2.5em solid transparent;
+}
+/* line 23, ../_scss/_mixins.scss */
+.badge-error:after {
+  content: "";
+  position: absolute;
+  right: -1.25em;
+  width: 0;
+  height: 0;
+  border-top: 2.5em solid transparent;
+  border-left: 1.25em solid #29001a;
+  border-bottom: 2.5em solid transparent;
+}
+/* line 33, ../_scss/_mixins.scss */
 .badge-error i {
   font-size: 4.25em;
   color: #ff00a5;
